revert: z-index issue in tickets (#441-#453)
This reverts commit b19eef1078a5e135c271688f8c1f55cd85712bb4.

--- a/src/pages/common/draftjs/plugins/toolbar/Toolbar.less
+++ b/src/pages/common/draftjs/plugins/toolbar/Toolbar.less
@@ -25,7 +25,6 @@
     bottom: 0;
     left: 0;
     padding: 2px 7px 5px;
-    z-index: 0;
 
     .actionsWrapper {
         display: flex;
